# copilot-agents

./: .env.example  .gitignore  Explainer.agent.md  README.md  pyproject.toml  test_projects.sh
agents/: Explain.agent.md  Maintain.agent.md
application/: README.md  pyproject.toml
application/src/: app.py
docs/: example.mmd
notebook/: README.ipynb  pyproject.toml
template/: Ask.agent.md
tests/: llms.py  test_agent_comparison.py  test_explain.py  test_maintain.py  tests.py
