[project]
name = "application"
version = "0.1"
requires-python = ">=3.10"
dependencies = []

[tool.poe.tasks]
lint1 = "pylint src/ tests/"
lint2 = "stylebook .github/ *.toml"
lint.parallel = ["lint1", "lint2"]
test = "pytest tests/"
cov1 = "pytest tests/ --cov"
cov2 = "coverage xml"
cov = ["cov1", "cov2"]

[tool.poe.tasks.build-website]
shell = "uv pip install -r website/requirements.txt && cd website/ && mkdocs build"

[tool.poe.tasks.preview-website]
shell = "uv pip install -r website/requirements.txt && cd website/ && mkdocs serve --livereload"

[tool.coverage.run]
omit = ["tests/*"]

[dependency-groups]
dev = [
  "poethepoet",
  # lint
  "pylint==4.0.4",
  "rulebook-pylint==0.2",
  "regex",
  "stylebook==0.2",
  # test
  "pytest",
  "pytest-cov",
]
